force-app/main/default/objects/Filme__c/Filme__c.object-meta.xml
<CustomObject>
    <label>Filme</label>
    <nameField>
        <displayFormat>Filme-{00000}</displayFormat>
        <label>Filme Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Filmes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>