force-app/main/default/objects/Filme__c/fields/DataLancamento__c.field-meta.xml
<CustomField>
    <fullName>DataLancamento__c</fullName>
    <label>Data de lançamento</label>
    <type>Date</type>
</CustomField>