force-app/main/default/objects/Filme__c/fields/ELancamento__c.field-meta.xml
<CustomField>
    <fullName>ELancamento__c</fullName>
    <formula>( TODAY() - TODAY() ) &lt; 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>É lançamento</label>
    <type>Checkbox</type>
</CustomField>