force-app/main/default/objects/Filme__c/fields/FilmeNaoEncontradoA__c.field-meta.xml
<CustomField>
    <fullName>FilmeNaoEncontradoA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filme não encontrado na API</label>
    <type>Checkbox</type>
</CustomField>