force-app/main/default/objects/Filme__c/fields/Genero__c.field-meta.xml
<CustomField>
    <fullName>Genero__c</fullName>
    <label>Gênero</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
                <label>Aventura</label>
            </value>
            <value>
                <fullName>878</fullName>
                <label>Ficção Científica</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>Ação</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Drama</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Animação</label>
            </value>
            <value>
                <fullName>35</fullName>
                <label>Comédia</label>
            </value>
            <value>
                <fullName>80</fullName>
                <label>Crime</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>Documentário</label>
            </value>
            <value>
                <fullName>10751</fullName>
                <label>Família</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Fantasia</label>
            </value>
            <value>
                <fullName>36</fullName>
                <label>História</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>Terror</label>
            </value>
            <value>
                <fullName>10402</fullName>
                <label>Música</label>
            </value>
            <value>
                <fullName>9648</fullName>
                <label>Mistério</label>
            </value>
            <value>
                <fullName>10749</fullName>
                <label>Romance</label>
            </value>
            <value>
                <fullName>10770</fullName>
                <label>Filme TV</label>
            </value>
            <value>
                <fullName>53</fullName>
                <label>Thriller</label>
            </value>
            <value>
                <fullName>10752</fullName>
                <label>Guerra</label>
            </value>
            <value>
                <fullName>37</fullName>
                <label>Velho Oeste</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>