force-app/main/default/objects/Filme__c/fields/HTMLDivulgacao__c.field-meta.xml
<CustomField>
    <fullName>HTMLDivulgacao__c</fullName>
    <label>HTML de divulgação</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>