force-app/main/default/objects/Filme__c/fields/LinguaOriginal__c.field-meta.xml
<CustomField>
    <fullName>LinguaOriginal__c</fullName>
    <label>Língua Original</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en</fullName>
                <label>Inglês</label>
            </value>
            <value>
                <fullName>es</fullName>
                <label>Espanhol</label>
            </value>
            <value>
                <fullName>ja</fullName>
                <label>Japonês</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>