force-app/main/default/objects/Filme__c/fields/NotaMedia__c.field-meta.xml
<CustomField>
    <fullName>NotaMedia__c</fullName>
    <label>Nota Média</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>