force-app/main/default/objects/Filme__c/fields/Popularidade__c.field-meta.xml
<CustomField>
    <fullName>Popularidade__c</fullName>
    <label>Popularidade</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>