force-app/main/default/objects/Filme__c/validationRules/ValidateName.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateName</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Nome__c)),
    OR(
        CONTAINS(Nome__c, &quot;@&quot;),
        CONTAINS(Nome__c, &quot;#&quot;),
        CONTAINS(Nome__c, &quot;{&quot;),
        CONTAINS(Nome__c, &quot;}&quot;),
        CONTAINS(Nome__c, &quot;;&quot;)
    )
)</errorConditionFormula>
    <errorMessage>Nome inválido</errorMessage>
</ValidationRule>