force-app/main/default/objects/Filme__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ID__c</columns>
    <columns>Nome__c</columns>
    <columns>ELancamento__c</columns>
    <columns>DataLancamento__c</columns>
    <columns>Descricao__c</columns>
    <columns>Genero__c</columns>
    <columns>LinguaOriginal__c</columns>
    <columns>NotaMedia__c</columns>
    <columns>Popularidade__c</columns>
    <columns>FilmeNaoEncontradoA__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>